fix: overflow issue

--- a/app/assets/stylesheets/active_admin/flat_theme/_base.scss
+++ b/app/assets/stylesheets/active_admin/flat_theme/_base.scss
@@ -172,6 +172,14 @@ body.active_admin {
     display: inline-block !important;
   }
 
+  .highlight{
+    overflow: scroll;
+    background: #e6e6e6;
+    pre{
+      background: transparent;
+    }
+  }
+
   // Forms
   form {
     // Apply the new font to submit buttons too
